centered image wrapper for gifs

--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -107,6 +107,11 @@ footer {
 	height:319px;
 }
 
+.imgWrapper {
+	width:500px;
+	margin:0 auto;
+}
+
 .imgWrapper li {
 	float:left;
 	padding:25px;
